--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link rel="stylesheet" type="text/css" href="stars.css" />
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" type="text/css" href="stars.css" />
 </head>
 <body>
+
 <canvas id="content"></canvas>
+
 <script src="frontend/jquery.js"></script>
 <script src="frontend/jquery.fullscreen.js"></script>
 <script src="frontend/timer.js"></script>
